components/paperless-ngx/route.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-web
spec:
  selector:
    app: paperless-webserver
  ports:
    - name: http
      port: 8000
      targetPort: http
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-web
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway-system
  hostnames:
    - paperless.${EXTERNAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless-web
          port: 8000
